[package]
name = "godot"
version = "0.1.0"
authors = ["Matthew Collins <thethinkofdeath@gmail.com>"]
license = "MIT"
workspace = ".."

[dependencies]
godot-sys = {path = "../godot-sys" }
libc = "0.2"
bitflags = "1.0"

[build-dependencies]
serde = "1.0.15"
serde_json = "1.0.3"
serde_derive = "1.0.15"
